# Qt1SimpleTextEditor

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxygen.in  LICENSE  README.md
resources/: Qt1SimpleTextEditorDemo_de_DE.ts  Qt1SimpleTextEditorDemo_pl_PL.ts  Qt1SimpleTextEditorDemo_uk_UA.ts
src/: CMakeLists.txt  Qt1SimpleTextEditor-conf.h.in  lupdate.pro.in  main.cpp
src/window/: CMakeLists.txt  EditorWindow.cpp  EditorWindow.h  FilterCreator.cpp  FilterCreator.h  IEditorWindow.h  Qt1SimpleTextEditor-conf.h.in  Qt1SimpleTextEditorDemo_uk_UA.h.in  WindowFactory.cpp  WindowFactory.h  kytok.org.ua-logo.h.in
src/window/custom-widgets/: TextEdit.cpp  TextEdit.h
src/window/embalishers/: CMakeLists.txt
src/window/embellishers/: AboutDialogEmbellisher.cpp  AboutDialogEmbellisher.h  FindEmbellisher.cpp  FindEmbellisher.h  GoToLineEmbellisher.cpp  GoToLineEmbellisher.h  MenuEmbalisher.cpp  MenuEmbalisher.h  MenuEmbellisher.cpp  MenuEmbellisher.h
src/window/file-dealers/: CMakeLists.txt  DealersFactory.cpp  DealersFactory.h  FileDealer.cpp  FileDealer.h  FilterCreator.cpp  FilterCreator.h  HtmlDealer.cpp  HtmlDealer.h  IDealer.h  TxtDealer.cpp  TxtDealer.h
